# iop-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
coeus-core/: Cargo.toml
coeus-core-ffi/: Cargo.toml
coeus-core-wasm/: .package.json  Cargo.toml  build.sh
coeus-core-wasm/src/: asset.rs  domain_name.rs  lib.rs  operation.rs  operations.rs  price.rs  principal.rs  signed.rs  state.rs  tx.rs
coeus-core/src/: asset.rs  domain.rs  lib.rs  price.rs  principal.rs  signed.rs  state.rs
coeus-core/src/operations/: delete.rs  mod.rs  register.rs  renew.rs  start_block.rs  transfer.rs  update.rs
coeus-core/src/policy/: mod.rs  registration.rs
coeus-node/: Cargo.toml
coeus-node/src/: domain.rs  lib.rs  state.rs
coeus-node/src/operations/: delete.rs  mod.rs  register.rs  renew.rs  transfer.rs  update.rs
coeus-node/src/policy/: registration.rs
coeus-proto/: Cargo.toml
coeus-proto/src/: domain_name.rs  lib.rs  operations.rs  signed.rs
coeus-proto/src/policy/: registration.rs
hydra-proto/: Cargo.toml
hydra-proto/src/: lib.rs  serializer.rs  transaction.rs
hydra-proto/src/txtype/: coeus.rs  hyd_core.rs  iop.rs  mod.rs  morpheus.rs  typed_asset.rs
hydra-sdk/: Cargo.toml
hydra-sdk/src/: lib.rs
hydra-sdk/src/vault/: mod.rs  plugin.rs  private.rs  public.rs  types.rs
hydra-sdk/src/vault_hydra/: mod.rs
iop-sdk/: Cargo.toml
iop-sdk/src/: lib.rs
journal-proto/: Cargo.toml
journal-proto/src/: lib.rs  serializer.rs
json-digest/: CHANGELOG.md  Cargo.toml
json-digest-wasm/: Cargo.toml  README.md
json-digest-wasm/src/: lib.rs
json-digest/src/: digest.rs  json_path.rs  lib.rs  nonce.rs
keyvault/: CHANGELOG.md  Cargo.toml  README.md
keyvault-wasm/: Cargo.toml  README.md  build.sh
keyvault-wasm/src/: bip32.rs  bip39.rs  bip44.rs  encrypt.rs  id.rs  lib.rs  morpheus.rs  networks.rs  pk.rs  seed.rs  sig.rs  sk.rs
keyvault/src/: bip32.rs  bip39.rs  bip43.rs  bip44.rs  bip44path.rs  cc.rs  encrypt.rs  lib.rs  network.rs  networks.rs  seed.rs  test_crypto.rs  tests.rs
keyvault/src/ed25519/: ext_sk.rs  id.rs  mod.rs  morpheus.rs  pk.rs  sig.rs  sk.rs
keyvault/src/multicipher/: id.rs  mod.rs  pk.rs  sig.rs  sk.rs
keyvault/src/secp256k1/: bip32.rs  bip44.rs  ext_pk.rs  ext_sk.rs  id.rs  mod.rs  pk.rs  sig.rs  sk.rs
morpheus-core/: Cargo.toml  README.md
morpheus-core-ffi/: Cargo.toml
morpheus-core-ffi/src/: bip.rs  bip44.rs  cres.rs  crypto.rs  did.rs  hydra_signer.rs  lib.rs  secp.rs  tx.rs  validation.rs  vault.rs
morpheus-core-ffi/src/bip44/: mod.rs  private_key.rs
morpheus-core-ffi/src/ffi/: convert.rs  cres.rs  cslice.rs  mod.rs
morpheus-core-ffi/src/hydra/: mod.rs  plugin.rs  private.rs  public.rs
morpheus-core-ffi/src/jwt/: mod.rs
morpheus-core-ffi/src/morpheus/: mod.rs  plugin.rs  private.rs  private_key.rs  private_kind.rs  public.rs  public_key.rs  public_kind.rs
morpheus-core-ffi/src/multicipher/: id.rs  pk.rs  sig.rs  sk.rs
morpheus-core-ffi/src/secp/: pk.rs  sig.rs  sk.rs
morpheus-core-ffi/src/signed/: bytes.rs  mod.rs
morpheus-core-wasm/: .package.json  Cargo.toml  build.sh
morpheus-core-wasm/src/: did.rs  json.rs  jwt.rs  lib.rs  sign.rs
morpheus-core-wasm/src/hydra/: mod.rs  plugin.rs  private.rs  public.rs  sign.rs  tx.rs
morpheus-core-wasm/src/morpheus/: mod.rs  plugin.rs  private.rs  private_kind.rs  public.rs  public_kind.rs  tx.rs
morpheus-core-wasm/src/vault/: mod.rs  serializer.rs
morpheus-core/src/: lib.rs  util.rs  vault.rs
morpheus-core/src/crypto/: hash.rs  json_digest.rs  mod.rs  sign.rs
morpheus-core/src/data/: auth.rs  claim.rs  did.rs  diddoc.rs  mod.rs  present.rs  serde_string.rs  validation.rs
morpheus-core/src/hydra/: crypto.rs  mod.rs  serializer.rs  sign.rs  transaction.rs
morpheus-core/src/hydra_sdk/: mod.rs
morpheus-core/src/morpheus_sdk/: mod.rs
morpheus-core/src/util/: json_path.rs  mod.rs
morpheus-node/: Cargo.toml
morpheus-node/src/: docs.rs  lib.rs  state.rs  state_holder.rs  test.rs  time_series.rs  txns.rs  util.rs
morpheus-proto/: Cargo.toml  README.md
morpheus-proto/src/: lib.rs
morpheus-proto/src/crypto/: hash.rs  mod.rs  sign.rs
morpheus-proto/src/data/: before_proof.rs  did.rs  diddoc.rs  error.rs  mod.rs  present.rs
morpheus-proto/src/txtype/: mod.rs  ops.rs
morpheus-sdk/: Cargo.toml
morpheus-sdk-legacy/: Cargo.toml
morpheus-sdk-legacy/src/: did.rs  sdk.rs
morpheus-sdk-legacy/src/io/: mod.rs
morpheus-sdk/src/: client.rs  didvault.rs  lib.rs  model.rs  sdk.rs  verifier.rs
morpheus-sdk/src/c_api/: call_context.rs  convert.rs  mod.rs  sdk.rs  unsafe_fut.rs
morpheus-sdk/src/crypto/: hash.rs  mask.rs  mod.rs  sign.rs
morpheus-sdk/src/data/: auth.rs  claim.rs  did.rs  diddoc.rs  hash.rs  mod.rs  present.rs  process.rs  schema.rs  sign.rs
morpheus-sdk/src/io/: did.rs  mod.rs  store.rs
morpheus-sdk/src/vault/: mod.rs  plugin.rs  private.rs  private_kind.rs  public.rs  public_kind.rs  types.rs
morpheus-sdk/src/vault_morpheus/: mod.rs
morpheus-sdk/src/wasm_api/: mod.rs
node-wasm/: .package.json  Cargo.toml  README.md  build.sh
node-wasm/src/: coeus.rs  doc.rs  lib.rs  morpheus.rs
proto-wasm/: Cargo.toml  README.md
proto-wasm/src/: did.rs  jwt.rs  lib.rs  sign.rs
proto-wasm/src/coeus/: asset.rs  domain_name.rs  mod.rs  operation.rs  policy.rs  principal.rs  signed.rs  tx.rs
sdk/: Cargo.toml
sdk-ffi/: Cargo.toml
sdk-ffi/include/: morpheus.i
sdk-ffi/src/: crypto.rs  did.rs  lib.rs  tx.rs  vault.rs
sdk-ffi/src/coeus/: mod.rs  operation.rs  policy.rs  signed.rs  tx.rs
sdk-ffi/src/ffi/: convert.rs  cres.rs  mod.rs
sdk-ffi/src/hydra/: mod.rs  plugin.rs  private.rs  tx.rs
sdk-ffi/src/jwt/: builder.rs  parser.rs
sdk-ffi/src/keyvault/: mod.rs
sdk-ffi/src/morpheus/: mod.rs  plugin.rs  private.rs  private_key.rs  private_kind.rs  public.rs  public_kind.rs  tx.rs
sdk-ffi/src/signed/: bytes.rs  json.rs  (+1 more)
sdk-wasm/: .package.json  Cargo.toml  README.md  build.sh
sdk-wasm/src/: lib.rs
sdk/src/: lib.rs
vault/: Cargo.toml
vault/src/: lib.rs  state.rs  vault.rs
(+118 files in other folders)
