[workspace]
members = [
    "coeus-core",
    "coeus-core-wasm",
    "hydra-proto",
    "hydra-sdk",
    "json-digest",
    "keyvault",
    "keyvault-wasm",
    "morpheus-core",
    "morpheus-core-wasm",
    "morpheus-sdk",
    "sdk",
    "sdk-ffi",
    "sdk-wasm",
    "vault"
]

# Experiment for optimizing WASM and FFI binary sizes
[profile.release]
lto = true
opt-level = 's'

[patch.crates-io]
iop-coeus-core = { path="./coeus-core" }
iop-coeus-core-wasm = { path = "./coeus-core-wasm" }
iop-hydra-proto = { path="./hydra-proto" }
iop-hydra-sdk = { path="./hydra-sdk" }
iop-keyvault = { path="./keyvault" }
iop-keyvault-wasm = { path="./keyvault-wasm" }
iop-morpheus-core = { path="./morpheus-core" }
iop-morpheus-sdk = { path="./morpheus-sdk" }
iop-morpheus-core-wasm = { path = "./morpheus-core-wasm" }
iop-vault = { path="./vault" }
json-digest = { path="./json-digest" }
