[workspace]
members = [
    "coeus-node",
    "coeus-proto",
    "hydra-proto",
    "hydra-sdk",
    "journal-proto",
    "json-digest-wasm",
    "json-digest",
    "keyvault",
    "keyvault-wasm",
    "morpheus-node",
    "morpheus-proto",
    "morpheus-sdk",
    "node-wasm",
    "proto-wasm",
    "sdk",
    "sdk-ffi",
    "sdk-wasm",
    "vault"
]

# Experiment for optimizing WASM and FFI binary sizes
[profile.release]
lto = true
opt-level = 's'

[patch.crates-io]
iop-coeus-node = { path="./coeus-node" }
iop-coeus-proto = { path="./coeus-proto" }
iop-hydra-proto = { path="./hydra-proto" }
iop-hydra-sdk = { path="./hydra-sdk" }
iop-journal-proto = { path="./journal-proto" }
iop-keyvault = { path="./keyvault" }
iop-keyvault-wasm = { path="./keyvault-wasm" }
iop-morpheus-node = { path="./morpheus-node" }
iop-morpheus-proto = { path="./morpheus-proto" }
iop-morpheus-sdk = { path="./morpheus-sdk" }
iop-node-wasm = { path="./node-wasm" }
iop-proto-wasm = { path="./proto-wasm" }
iop-vault = { path="./vault" }
json-digest-wasm = { path="./json-digest-wasm" }
json-digest = { path="./json-digest" }

# Local clone at parent folder
#iop-keyvault = { path="../keyvault-rs/keyvault" }
#iop-keyvault-wasm = { path="../keyvault-rs/keyvault-wasm" }

# Github branch
#iop-keyvault = { git="https://github.com/Internet-of-People/keyvault-rust", branch="develop" }
#iop-keyvault-wasm = { git="https://github.com/Internet-of-People/keyvault-rust", branch="develop" }
