[package]
name = "iop-coeus-core-ffi"
version = "0.0.6"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[lib]
name = "coeus_core"
crate-type = ["rlib", "cdylib"]


[dependencies]
#anyhow = "1.0.32"
#iop-coeus-core = "0.0.6"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
