[package]
name = "iop-coeus-core"
version = "0.0.12"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.32"
iop-keyvault = "0.0.12"
json-digest = "0.0.12"
iop-morpheus-core = { version = "0.0.12", optional = true }
serde = { version="*", features=["derive"] }
serde_json = { version="*", features=["preserve_order"] }
serde_str = "0.1.0"
# Valico 3.5.0 introduced ancient dependency uritemplate, causing WASM builds to fail
# https://github.com/s-panferov/valico/issues/70
valico = "=3.4.0"


[features]
#default = ["did"]
did = ["iop-morpheus-core"]
