[package]
name = "iop-coeus-core"
version = "0.0.13"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.32"
iop-keyvault = "0.0.13"
json-digest = "0.0.13"
iop-morpheus-core = { version = "0.0.13", optional = true }
serde = { version="*", features=["derive"] }
serde_json = { version="*", features=["preserve_order"] }
serde_str = "0.1.0"
valico = "3.6.0"


[features]
#default = ["did"]
did = ["iop-morpheus-core"]
