[package]
name = "iop-coeus-core"
version = "0.0.12-hotfix1"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.32"
iop-keyvault = "=0.0.12-hotfix1"
json-digest = "0.0.12-hotfix1"
iop-morpheus-core = { version = "0.0.12-hotfix1", optional = true }
serde = { version="1.0.121", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_str = "0.1.0"
valico = "3.6.0"

[features]
#default = ["did"]
did = ["iop-morpheus-core"]
