[package]
name = "iop-coeus-node"
description = "Coeus layer-2 plugin implementation for Hydraledger"
version = "0.0.16"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/Internet-of-People/iop-rs"


[dependencies]
anyhow = "1.0.57"
iop-coeus-proto = "0.0.16"
iop-journal-proto = "0.0.16"
iop-keyvault = "0.0.16"
iop-morpheus-proto = { version = "0.0.16", optional = true }
json-digest = "0.0.16"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_str = "0.1.0"
valico = "3.6.0"
# Need to set features on the outdated dependency of valico
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }

[features]
#default = ["did"]
did = ["iop-morpheus-proto"]
