[package]
name = "iop-coeus-proto"
version = "0.0.13"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.32"
iop-journal-proto = "0.0.13"
iop-keyvault = "0.0.13"
json-digest = "0.0.13"
serde = { version="1.0.121", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_bytes = "0.11.5"
serde_str = "0.1.0"
