[package]
name = "iop-coeus-proto"
description = "Coeus protocol definitions used on both node and sdk side of the IOP Stack™"
version = "0.0.15"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.57"
iop-journal-proto = "0.0.15"
iop-keyvault = "0.0.15"
json-digest = "0.0.15"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_bytes = "0.11.6"
serde_str = "0.1.0"
