[package]
name = "iop-hydra-proto"
version = "0.0.6"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
edition = "2018"


[dependencies]
anyhow = "1.0.32"
byteorder = "1.3.4"
hex = "0.4.2"
iop-coeus-core = "0.0.6"
iop-keyvault = "0.0.6"
iop-morpheus-core = "0.0.6"
json-digest = "0.0.6"
rand = "0.7.3"
serde = "1.0.115"
serde_bytes = "0.11.5"
serde_json = "1.0.57"
serde_repr = "0.1.6"
serde_str = "0.1.0"
sha2 = "0.9.1"
tiny-bip39 = { version = "0.7.3", default-features = false }
varint = "0.9.0"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
