[package]
name = "iop-hydra-proto"
description = "Hydra-core specific protocol definitions for the IOP Stack™"
version = "0.0.16"
authors = [
  "IOP Ventures LLC <dev@iop-ventures.com>",
  "Rache Bartmoss <bartmoss@tutanota.com>",
  "wigy <wigy_opensource_developer@yahoo.com>",
]
license = "LGPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/"


[dependencies]
anyhow = "1.0.57"
byteorder = "1.4.3"
hex = "0.4.3"
iop-coeus-proto = "0.0.16"
iop-journal-proto = "0.0.16"
iop-keyvault = "0.0.16"
iop-morpheus-proto = "0.0.16"
json-digest = "0.0.16"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_repr = "0.1.8"
serde_str = "0.1.0"
sha2 = "0.10.2"
varint = "0.9.0"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
