[package]
name = "iop-hydra-sdk"
version = "0.0.13"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
edition = "2018"


[dependencies]
anyhow = "1.0.32"
byteorder = "1.3.4"
hex = "0.4.2"
iop-hydra-proto = "0.0.13"
iop-keyvault = "0.0.13"
iop-morpheus-proto = "0.0.13"
iop-vault = "0.0.13"
parking_lot = { version = "0.11.1", features = ["serde", "wasm-bindgen"] }
rand = "0.8.3"
serde = "1.0.115"
serde_bytes = "0.11.5"
serde_json = "1.0.57"
sha2 = "0.9.1"
typetag = "0.1.5"
varint = "0.9.0"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
