[package]
name = "iop-hydra-sdk"
description = "Hydraledger specific modules for the IOP Stack™ SDK"
version = "0.0.16"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
edition = "2021"


[dependencies]
anyhow = "1.0.57"
byteorder = "1.4.3"
hex = "0.4.3"
iop-hydra-proto = "0.0.16"
iop-keyvault = "0.0.16"
iop-morpheus-proto = "0.0.16"
iop-vault = "0.0.16"
parking_lot = { version = "0.12.1", features = ["serde"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
sha2 = "0.10.2"
typetag = "0.1.8"
varint = "0.9.0"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
