[package]
name = "iop-sdk"
version = "0.0.6"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
edition = "2018"


[lib]
name = "iop_sdk"
crate-type = ["rlib","cdylib"]


[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.40"
hyper = "0.13.7"
iop-hydra-proto = "0.0.6"
iop-hydra-sdk = "0.0.6"
iop-keyvault = "0.0.6"
iop-morpheus-core = "0.0.6"
iop-morpheus-sdk = "0.0.6"
iop-vault = "0.0.6"
log = "0.4.11"
rand = "0.7.3"
serde = "1.0.115"
serde_bytes = "0.11.5"
serde_json = "1.0.57"
tiny-bip39 = { version = "0.7.3", default-features = false }
tokio = { version="0.2.22", features=["full"] }
typetag = "0.1.5"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
