[package]
name = "json-digest-wasm"
version = "0.0.16"
edition = "2021"
description = "WebAssembly wrappers for the json-digest crate."
authors = [
  "IOP Ventures LLC <dev@iop-ventures.com>",
  "wigy <wigy_opensource_developer@yahoo.com>",
  "Rache Bartmoss <bartmoss@tutanota.com>",
]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/glossary?id=json-masking"
keywords = ["crypto", "wallet", "iop", "wasm", "ssi"]
categories = ["cryptography", "cryptography::cryptocurrencies", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
json-digest = "0.0.16"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
wasm-bindgen = { version = "0.2.81" }
