[package]
name = "json-digest"
version = "0.0.13"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
description = "Allow selective masking of JSON subdocuments for privacy, preserving the digest of the whole document."
license = "LGPL-3.0-or-later"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.global/#/glossary?id=json-masking"
keywords = ["crypto", "iop", "privacy", "json", "digest"]
categories = ["cryptography", "algorithms"]


[dependencies]
anyhow = "1.0.32"
multibase = "0.9.1"
rand = "0.8.3"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
tiny-keccak = "1"
unicode-normalization = "0.1.13"


[dev-dependencies]
hex = "0.4.2"
