[package]
name = "json-digest"
version = "0.0.15"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
description = "Allow selective masking of JSON subdocuments for privacy, preserving the digest of the whole document."
license = "LGPL-3.0-or-later"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/glossary?id=json-masking"
keywords = ["crypto", "iop", "privacy", "json", "digest"]
categories = ["cryptography", "algorithms"]


[dependencies]
anyhow = "1.0.57"
multibase = "0.9.1"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
unicode-normalization = "0.1.19"


[dev-dependencies]
hex = "0.4.3"
