[package]
name = "iop-morpheus-core-ffi"
version = "0.0.4"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[lib]
name = "morpheus_core"
crate-type = ["rlib", "cdylib"]


[dependencies]
anyhow = "*"
chrono = { version = "*", features = ["wasmbind"] }
iop-keyvault = "0.0.4"
iop-morpheus-core = "0.0.4"
log = "*"
serde_json = { version = "*", features = ["preserve_order"] }
serde_repr = "*"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
