[package]
name = "iop-morpheus-core-ffi"
version = "0.0.4"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[lib]
name = "morpheus_core"
crate-type = ["rlib", "cdylib"]


[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["wasmbind"] }
iop-keyvault = "0.0.4"
iop-morpheus-core = "0.0.4"
log = "0.4.11"
serde_json = { version = "1.0.57", features = ["preserve_order"] }
serde_repr = "0.1.6"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
