[package]
name = "iop-morpheus-core-ffi"
version = "0.0.6"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[lib]
name = "morpheus_core"
crate-type = ["rlib", "cdylib"]


[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["wasmbind"] }
iop-hydra-proto = "0.0.6"
iop-hydra-sdk = "0.0.6"
iop-keyvault = "0.0.6"
iop-morpheus-core = "0.0.6"
iop-morpheus-sdk = "0.0.6"
iop-vault = "0.0.6"
json-digest = "0.0.6"
serde = { version = "1.0.115", features = ["derive", "rc"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
serde_repr = "0.1.6"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
