[package]
name = "iop-morpheus-core-wasm"
version = "0.0.6"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.32"
iop-hydra-proto = "0.0.6"
iop-hydra-sdk = "0.0.6"
iop-keyvault = "0.0.6"
iop-keyvault-wasm = "0.0.6"
iop-morpheus-core = "0.0.6"
iop-morpheus-sdk = "0.0.6"
iop-vault = "0.0.6"
json-digest = "0.0.6"
serde = "1.0.115"
serde_json = "1.0.57"
# Force "wasm-bindgen" feature in uuid dependency needed by valico in coeus-core
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
# TODO latest 0.2.66/67 does not work with recent wasm-opt
wasm-bindgen = { version = "=0.2.65", features = ["serde-serialize"] }

# wasm-bindgen-futures = "*"
