[package]
name = "iop-morpheus-core-wasm"
version = "0.0.13"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.32"
iop-hydra-proto = "0.0.13"
iop-hydra-sdk = "0.0.13"
iop-keyvault = "0.0.13"
iop-keyvault-wasm = "0.0.13"
iop-morpheus-core = "0.0.13"
iop-morpheus-sdk = "0.0.13"
iop-vault = "0.0.13"
json-digest = "0.0.13"
serde = "1.0.115"
serde_json = "1.0.57"
# Force "wasm-bindgen" feature in uuid dependency needed by valico in coeus-core
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"] }

# wasm-bindgen-futures = "*"
