[package]
name = "iop-morpheus-core"
version = "0.0.1"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[dependencies]
failure = "*"
iop-keyvault = { git="https://github.com/Internet-of-People/keyvault-rust", branch="develop" }
log = "*"
multibase = "0.8"
rand = "*"
serde = "*"
serde_json = { version = "*", features = ["preserve_order"] }
tiny-keccak = "1"
