[package]
name = "iop-morpheus-core"
version = "0.0.2"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[dependencies]
anyhow = "*"
chrono = { version = "*", features = ["wasmbind"] }
failure = "*"
iop-keyvault = "0.0.4"
jwt-compact = { version = "*", default-features = false }
log = "*"
multibase = "0.8"
rand = "*"
serde = { version = "*", features = ["rc"] }
serde_json = { version = "*", features = ["preserve_order"] }
serde_repr = "*"
tiny-keccak = "1"
typetag = "*"
unicode-normalization = "*"

# --- Hydra dependencies
byteorder = "*"
hex = "*"
sha2 = "*"
varint = "*"


[dev-dependencies]
hex = "*"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
