[package]
name = "iop-morpheus-core"
version = "0.0.10"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["wasmbind"] }
iop-keyvault = "0.0.10"
json-digest = "0.0.10"
jwt-compact = { version = "0.2.0", default-features = false }
multibase = "0.8.0"
rand = "0.7.3"
serde = { version = "1.0.115", features = ["derive", "rc"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
serde_str = "0.1.0"

# --- Hydra dependencies
byteorder = "1.3.4"
hex = "0.4.2"
sha2 = "0.9.1"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
