[package]
name = "iop-morpheus-node"
description = "Morpheus layer-2 plugin implementation for Hydraledger"
version = "0.0.16"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/Internet-of-People/iop-rs"


[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["wasmbind"] }
iop-hydra-proto = "0.0.16"
iop-journal-proto = "0.0.16"
iop-keyvault = "0.0.16"
iop-morpheus-proto = "0.0.16"
json-digest = "0.0.16"
jwt-compact = { version = "0.5.0", default-features = false }
#multibase = "0.9.1"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_str = "0.1.0"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
