[package]
name = "iop-morpheus-proto"
version = "0.0.13"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["wasmbind"] }
iop-journal-proto = "0.0.13"
iop-keyvault = "0.0.13"
json-digest = "0.0.13"
jwt-compact = { version = "0.2.0", default-features = false }
serde = { version="1.0.121", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_str = "0.1.0"
